--- a/debian/changelog
+++ b/debian/changelog
@@ -1,5 +1,6 @@
-rackhd (0.9.0) UNRELEASED; urgency=low
+rackhd (1.0.0) UNRELEASED; urgency=low
 
   * Initial release
+  * release 1.0.0
 
- -- rackhd <rackhd@emc.com>  Sun, 09 Oct 2016 14:39:48 +0800
+ -- rackhd <rackhd@emc.com>  Fri, 13 Jan 2017 21:03:20 -0500
