--- a/debian/changelog
+++ b/debian/changelog
@@ -1,8 +1,9 @@
-rackhd (1.2.0) UNRELEASED; urgency=low
+rackhd (1.3.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
   * release 1.1.0
   * release 1.2.0
+  * release 1.3.0
 
- -- rackhd <rackhd@emc.com>  Fri, 10 Feb 2017 21:02:56 -0500
+ -- rackhd <rackhd@emc.com>  Fri, 24 Feb 2017 21:02:28 -0500
