--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.34.0) UNRELEASED; urgency=low
+rackhd (2.35.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -42,5 +42,6 @@ rackhd (2.34.0) UNRELEASED; urgency=low
   * release 2.32.0
   * release 2.33.0
   * release 2.34.0
+  * release 2.35.0
 
- -- rackhd <rackhd@emc.com>  Fri, 01 Dec 2017 17:17:21 +0000
+ -- rackhd <rackhd@emc.com>  Sat, 09 Dec 2017 02:30:28 +0000
