--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.36.0) UNRELEASED; urgency=low
+rackhd (2.37.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -44,5 +44,6 @@ rackhd (2.36.0) UNRELEASED; urgency=low
   * release 2.34.0
   * release 2.35.0
   * release 2.36.0
+  * release 2.37.0
 
- -- rackhd <rackhd@emc.com>  Fri, 15 Dec 2017 23:31:08 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 22 Dec 2017 23:31:11 +0000
