--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.38.0) UNRELEASED; urgency=low
+rackhd (2.39.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -46,5 +46,6 @@ rackhd (2.38.0) UNRELEASED; urgency=low
   * release 2.36.0
   * release 2.37.0
   * release 2.38.0
+  * release 2.39.0
 
- -- rackhd <rackhd@emc.com>  Fri, 29 Dec 2017 23:31:19 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 05 Jan 2018 23:30:46 +0000
