--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.41.0) UNRELEASED; urgency=low
+rackhd (2.42.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -49,5 +49,6 @@ rackhd (2.41.0) UNRELEASED; urgency=low
   * release 2.39.0
   * release 2.40.0
   * release 2.41.0
+  * release 2.42.0
 
- -- rackhd <rackhd@emc.com>  Fri, 19 Jan 2018 23:30:35 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 26 Jan 2018 23:30:32 +0000
