--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.43.0) UNRELEASED; urgency=low
+rackhd (2.44.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -51,5 +51,6 @@ rackhd (2.43.0) UNRELEASED; urgency=low
   * release 2.41.0
   * release 2.42.0
   * release 2.43.0
+  * release 2.44.0
 
- -- rackhd <rackhd@emc.com>  Fri, 02 Feb 2018 23:30:51 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 09 Feb 2018 23:31:17 +0000
