--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.45.0) UNRELEASED; urgency=low
+rackhd (2.46.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -53,5 +53,6 @@ rackhd (2.45.0) UNRELEASED; urgency=low
   * release 2.43.0
   * release 2.44.0
   * release 2.45.0
+  * release 2.46.0
 
- -- rackhd <rackhd@emc.com>  Fri, 16 Feb 2018 23:31:35 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 23 Feb 2018 23:30:52 +0000
