--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.47.0) UNRELEASED; urgency=low
+rackhd (2.48.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -55,5 +55,6 @@ rackhd (2.47.0) UNRELEASED; urgency=low
   * release 2.45.0
   * release 2.46.0
   * release 2.47.0
+  * release 2.48.0
 
- -- rackhd <rackhd@emc.com>  Fri, 02 Mar 2018 23:31:08 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 09 Mar 2018 23:30:51 +0000
