--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.52.0) UNRELEASED; urgency=low
+rackhd (2.53.0) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -60,5 +60,6 @@ rackhd (2.52.0) UNRELEASED; urgency=low
   * release 2.50.0
   * release 2.51.0
   * release 2.52.0
+  * release 2.53.0
 
- -- rackhd <rackhd@emc.com>  Fri, 06 Apr 2018 22:32:18 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 13 Apr 2018 22:31:46 +0000
