--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.0) UNRELEASED; urgency=low
+rackhd (2.60.1) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -63,5 +63,6 @@ rackhd (2.60.0) UNRELEASED; urgency=low
   * release 2.53.0
   * release 2.54.0
   * release 2.60.0
+  * release 2.60.1
 
- -- rackhd <rackhd@emc.com>  Sat, 28 Apr 2018 03:28:40 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 04 May 2018 22:32:15 +0000
