--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.1) UNRELEASED; urgency=low
+rackhd (2.60.2) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -64,5 +64,6 @@ rackhd (2.60.1) UNRELEASED; urgency=low
   * release 2.54.0
   * release 2.60.0
   * release 2.60.1
+  * release 2.60.2
 
- -- rackhd <rackhd@emc.com>  Fri, 04 May 2018 22:32:15 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 11 May 2018 22:32:16 +0000
