--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.2) UNRELEASED; urgency=low
+rackhd (2.60.3) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -65,5 +65,6 @@ rackhd (2.60.2) UNRELEASED; urgency=low
   * release 2.60.0
   * release 2.60.1
   * release 2.60.2
+  * release 2.60.3
 
- -- rackhd <rackhd@emc.com>  Fri, 11 May 2018 22:32:16 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 18 May 2018 22:32:06 +0000
