--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.3) UNRELEASED; urgency=low
+rackhd (2.60.4) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -66,5 +66,6 @@ rackhd (2.60.3) UNRELEASED; urgency=low
   * release 2.60.1
   * release 2.60.2
   * release 2.60.3
+  * release 2.60.4
 
- -- rackhd <rackhd@emc.com>  Fri, 18 May 2018 22:32:06 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 01 Jun 2018 22:33:18 +0000
