--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.4) UNRELEASED; urgency=low
+rackhd (2.60.5) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -67,5 +67,6 @@ rackhd (2.60.4) UNRELEASED; urgency=low
   * release 2.60.2
   * release 2.60.3
   * release 2.60.4
+  * release 2.60.5
 
- -- rackhd <rackhd@emc.com>  Fri, 01 Jun 2018 22:33:18 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 08 Jun 2018 22:31:43 +0000
