--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-rackhd (2.60.5) UNRELEASED; urgency=low
+rackhd (2.60.6) UNRELEASED; urgency=low
 
   * Initial release
   * release 1.0.0
@@ -68,5 +68,6 @@ rackhd (2.60.5) UNRELEASED; urgency=low
   * release 2.60.3
   * release 2.60.4
   * release 2.60.5
+  * release 2.60.6
 
- -- rackhd <rackhd@emc.com>  Fri, 08 Jun 2018 22:31:43 +0000
+ -- rackhd <rackhd@emc.com>  Fri, 29 Jun 2018 22:32:03 +0000
